@@ -2204,6 +2204,31 @@ g_type_register_fundamental (GType                       type_id,
 }
 
 GType
+g_type_register_static_simple (GType             parent_type,
+			       const gchar      *type_name,
+			       guint             class_size,
+			       GClassInitFunc    class_init,
+			       guint             instance_size,
+			       GInstanceInitFunc instance_init,
+			       GTypeFlags	 flags)
+{
+  GTypeInfo info;
+
+  info.class_size = class_size;
+  info.base_init = NULL;
+  info.base_finalize = NULL;
+  info.class_init = class_init;
+  info.class_finalize = NULL;
+  info.class_data = NULL;
+  info.instance_size = instance_size;
+  info.n_preallocs = 0;
+  info.instance_init = instance_init;
+  info.value_table = NULL;
+
+  g_type_register_static (parent_type, type_name, &info, flags);
+}
+
+GType
 g_type_register_static (GType            parent_type,
 			const gchar     *type_name,
 			const GTypeInfo *info,
